# gaeul

./: .gitignore  LICENSE  README.md  meson.build
.github/workflows/: ci.yml
agent/: gaeul-agent.c  gaeul-agent.h  gaeul2-mjpeg-agent.c  gaeul2-relay-agent.c  gaeul2-source-agent.c  meson.build  org.hwangsaeul.Gaeul.gschema.xml  org.hwangsaeul.Gaeul2.gschema.xml
dbus/: codegen.py  meson.build  org.hwangsaeul.Gaeul.Manager.xml  org.hwangsaeul.Gaeul.conf
debian/: changelog  control  copyright  gaeul.install  gaeul.postinst  gaeul.service  gaeul.udev  gaeul2-agent.postinst  gaeul2-mjpeg-agent.install  gaeul2-mjpeg-agent.service  gaeul2-relay-agent.install  gaeul2-relay-agent.service  gaeul2-source-agent.default  gaeul2-source-agent.install  gaeul2-source-agent.postinst  gaeul2-source-agent.service  gaeul2-source-agent.udev  libgaeul2-mjpeg.install  libgaeul2-relay.install  libgaeul2-source.install  libgaeul2.install  rules
docs/ko/: qa.md
gaeul/: application.c  application.h  enumtypes.c.template  enumtypes.h.template  gaeul.c  gaeul.h  meson.build  org.hwangsaeul.Gaeul2.Relay.gschema.xml  org.hwangsaeul.Gaeul2.Source.gschema.xml  source-application.c  source-application.h  stream-authenticator.c  stream-authenticator.h  tuple.c  tuple.h  types.c  types.h
gaeul/mjpeg/: meson.build  mjpeg-application.c  mjpeg-application.h  mjpeg-request.c  mjpeg-request.h  org.hwangsaeul.Gaeul2.MJPEG.Service.xml  org.hwangsaeul.Gaeul2.MJPEG.conf  org.hwangsaeul.Gaeul2.MJPEG.gschema.xml
gaeul/relay/: meson.build  org.hwangsaeul.Gaeul2.Relay.conf  org.hwangsaeul.Gaeul2.Relay.gschema.xml  org.hwangsaeul.Gaeul2.Relay.xml  relay-application.c  relay-application.h
gaeul/source/: meson.build  org.hwangsaeul.Gaeul2.Source.conf  org.hwangsaeul.Gaeul2.Source.gschema.xml  org.hwangsaeul.Gaeul2.Source.xml  source-application.c
subprojects/: chamge.wrap  gaeguli.wrap  hwangsae.wrap
tests/: meson.build  test-authenticator.c  test-mjpeg-request.c  test-relay-dbus.c  test-relay-disconnect.c  test-relay-reroute.c  test-tuple.c
tests/common/: meson.build  relay-agent-test.c  relay-agent-test.h
